--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -607,6 +607,7 @@ TransmutationTable:
         - torchflower_seeds: 16
         - pitcher_pod: 16
         - resin_clump: 16
+        - petrified_oak_slab: 260
 
 # 资源包配置
 resourcepack:
